DEP-18: paas-cli публикует сборку ветки
